# generic_adcs

./: CMakeLists.txt  README.md
fsw/cfg/: Inp_ADAC.txt  Inp_DI.txt  Inp_DO.txt
fsw/cfs/: CMakeLists.txt
fsw/cfs/cfg/: Inp_ADAC.txt  Inp_DI.txt  Inp_DO.txt
fsw/cfs/mission_inc/: generic_adcs_perfids.h
fsw/cfs/platform_inc/: generic_adcs_msgids.h
fsw/cfs/src/: generic_adcs_adac.c  generic_adcs_adac.h  generic_adcs_app.c  generic_adcs_app.h  generic_adcs_events.h  generic_adcs_ingest.c  generic_adcs_ingest.h  generic_adcs_msg.h  generic_adcs_output.c  generic_adcs_output.h  generic_adcs_utilities.c  generic_adcs_utilities.h  generic_adcs_version.h
fsw/fprime/: library.cmake
fsw/fprime/adcs_src/: CMakeLists.txt  Generic_adcs.cpp  Generic_adcs.fpp  Generic_adcs.hpp
fsw/fprime/adcs_src/docs/: sdd.md
fsw/fprime/cfg/: Inp_ADAC.txt
fsw/fprime/mission_inc/: generic_adcs_perfids.h
fsw/fprime/platform_inc/: generic_adcs_msgids.h
fsw/fprime/src/: generic_adcs_adac.c  generic_adcs_adac.h  generic_adcs_app.c  generic_adcs_app.h  generic_adcs_events.h  generic_adcs_ingest.c  generic_adcs_ingest.h  generic_adcs_msg.h  generic_adcs_output.c  generic_adcs_output.h  generic_adcs_utilities.c  generic_adcs_utilities.h  generic_adcs_version.h
fsw/platform_inc/: generic_adcs_msgids.h
fsw/shared/: generic_adcs_adac.c  generic_adcs_adac.h  generic_adcs_utilities.c  generic_adcs_utilities.h
fsw/shared/cfg/: Inp_ADAC.txt
fsw/src/: generic_adcs_adac.c  generic_adcs_adac.h  generic_adcs_app.c  generic_adcs_app.h  generic_adcs_events.h  generic_adcs_ingest.c  generic_adcs_ingest.h  generic_adcs_msg.h  generic_adcs_output.c  generic_adcs_output.h  generic_adcs_utilities.c  generic_adcs_utilities.h
gsw/: generic_adcs.xtce
gsw/GENERIC_ADCS/cmd_tlm/: GENERIC_ADCS_CMD.txt  GENERIC_ADCS_TLM.txt
gsw/GENERIC_ADCS/lib/: generic_adcs_lib.rb
gsw/GENERIC_ADCS/procedures/: generic_adcs_test.rb
gsw/GENERIC_ADCS/procedures/tests/: generic_adcs_app_test.rb  generic_adcs_cpt_test.rb
gsw/GENERIC_ADCS/tlm_grapher/: AC_BDOT.txt  BVB.txt  DO_Commands.txt  GNC_Commands.txt  SVB.txt  TRUTH_WN.txt  WN.txt
